🐞 fix(plonk lecture 4): typo

--- a/courses/Plonk-GuoYu/lecture04/notes-plonk-lecture4-constraints.ipynb
+++ b/courses/Plonk-GuoYu/lecture04/notes-plonk-lecture4-constraints.ipynb
@@ -527,7 +527,7 @@
     "在论文 [PlonK: Permutations over Lagrange-bases for\n",
     "Oecumenical Noninteractive arguments of\n",
     "Knowledge](https://eprint.iacr.org/2019/953.pdf) 中有关于 $k_1$ 与 $k_2$ 选取的一个描述：\n",
-    "> $S_{ID1}(X) = X$, $S_{ID2}(X) = k1X$, $S_{ID3}(X) = k_2X$: the identity permutation applied to $\\textbf{a}$, $\\textbf{b}$, $\\textbf{c}$. $k_1$, $k_2 \\in \\mathbb{F}$ are chosen such that $H$, $k_1 \\cdot H$, $k_2 \\cdot H$ are distinct cosets of $H$ in $\\mathbb{F}^*$, and thus consist of $3n$ distinct elements. (For example, when $\\omega$ is a quadratic residue in $\\mathbb{F}$, take $k_1$ to be any quadratic non-residue, and $k_2$ to be a quadratic non-residue not contained in $k_1 \\cdot H$.)\n",
+    "> $S_{ID1}(X) = X$, $S_{ID2}(X) = k_1X$, $S_{ID3}(X) = k_2X$: the identity permutation applied to $\\textbf{a}$, $\\textbf{b}$, $\\textbf{c}$. $k_1$, $k_2 \\in \\mathbb{F}$ are chosen such that $H$, $k_1 \\cdot H$, $k_2 \\cdot H$ are distinct cosets of $H$ in $\\mathbb{F}^*$, and thus consist of $3n$ distinct elements. (For example, when $\\omega$ is a quadratic residue in $\\mathbb{F}$, take $k_1$ to be any quadratic non-residue, and $k_2$ to be a quadratic non-residue not contained in $k_1 \\cdot H$.)\n",
     "\n",
     "下面证明下上面这句话中For example 的取法的正确性，即 \"For example, when $\\omega$ is a quadratic residue in $\\mathbb{F}$, take $k_1$ to be any quadratic non-residue, and $k_2$ to be a quadratic non-residue not contained in $k_1 \\cdot H$.\""
    ]
